tests/baselines/reference/for-of49.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of49.ts(3,13): error TS2364: Invalid left-hand side of assignment expression.


==== tests/cases/conformance/es6/for-ofStatements/for-of49.ts (1 errors) ====
    var k: string, v: boolean;
    var map = new Map([["", true]]);
    for ([k, ...[v]] of map) {
                ~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
        k;
        v;
    }